--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1153,6 +1153,23 @@ input::-webkit-slider-thumb:focus {
 
 /* Interactive buttons*/
 
+.minus:focus-visible,
+.plus:focus-visible {
+  color: #000000;
+  opacity: 1;
+  outline: none;
+}
+
+.minus:focus-visible > .svg-outline {
+  outline: 3px solid #82B3D3;
+  border-radius: 4px;
+}
+
+.plus:focus-visible > .svg-outline {
+  outline: 3px solid #82B3D3;
+  border-radius: 4px;
+}
+
 .input-min:hover,
 .input-max:hover {
   background-color: #E6E6E6;
@@ -1216,7 +1233,8 @@ input::-webkit-slider-thumb:focus {
 }
 
 .close-modal:focus-visible {
-  border: 2px solid #000000;
+  border: 3px solid #83B3D3;
+  background-color: #E6E6E6;
 }
 
 .catalog-filter-list:focus {
@@ -1285,7 +1303,8 @@ input::-webkit-slider-thumb:focus {
 .newsletter-button:focus-visible,
 .filter-button:focus-visible,
 .to-favorites-button:focus-visible,
-.switch-button:focus-visible {
+.switch-button:focus-visible,
+.submit-registration:focus-visible {
   background-color: #68A2CA;
   outline: 3px solid #83B3D3;
 }
@@ -1389,6 +1408,10 @@ input::-webkit-slider-thumb:focus {
 
 .control-input-radio:active + .control-mark-radio {
   box-shadow: 0px 0px 0px 2px rgba(131, 179, 211, 1);
+}
+
+.date-input:focus {
+  outline: 2px solid #000;
 }
 
 
